--- a/Projektimallit/Xamarin/MonoDevelop.Jypeli.Linux.v4.csproj
+++ b/Projektimallit/Xamarin/MonoDevelop.Jypeli.Linux.v4.csproj
@@ -139,7 +139,7 @@
     <EmbeddedResource Include="templates\FysiikkaPeli.SimplePhysics.xpt.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\MonoDevelop.Jypeli.Linux.addin.v4.xml" />
+    <EmbeddedResource Include="Properties-v4\MonoDevelop.Jypeli.Linux.addin.xml" />
     <EmbeddedResource Include="assemblies\Linux\OpenTK.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
