--- a/branches/MonoGame/Projektimallit/Xamarin/MonoDevelop.Jypeli.Linux.v4.csproj
+++ b/branches/MonoGame/Projektimallit/Xamarin/MonoDevelop.Jypeli.Linux.v4.csproj
@@ -14,7 +14,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Linux\Debug</OutputPath>
+    <OutputPath>bin\Linux\Debug-v4</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -23,7 +23,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Linux\Release</OutputPath>
+    <OutputPath>bin\Linux\Release-v4</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
